Fixed conflict FileProvider between Smooch.

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
           package="com.imagepicker">
     <application>
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name=".FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
             android:grantUriPermissions="true"
@@ -16,5 +16,3 @@
         </provider>
     </application>
 </manifest>
-
-
